2008-02-27  Peter Bloomfield

	* libbalsa/mailbox.c: (libbalsa_mailbox_changed):
	* libbalsa/mailbox_imap.c: (lbm_imap_check):
	* libbalsa/filter-funcs.c: (libbalsa_condition_compare): port
	more changes from trunk.

2008-02-27  Peter Bloomfield

	Port changes from trunk.
	* libbalsa/filter-funcs.c:
	* libbalsa/identity.c:
	* libbalsa/identity.h:
	* libbalsa/libbalsa.c:
	* libbalsa/libbalsa_private.h:
	* libbalsa/mailbox.c:
	* libbalsa/mailbox.h:
	* libbalsa/rfc3156.c:
	* libbalsa/rfc3156.h:
	* src/balsa-index.c:
	* src/balsa-mblist.c:
	* src/balsa-mblist.h:
	* src/balsa-message.c:
	* src/balsa-message.h:
	* src/filter-edit-callbacks.c:
	* src/mailbox-conf.c:
	* src/mailbox-node.c:
	* src/main-window.c:
	* src/message-window.c:
	* src/save-restore.c:
	* src/save-restore.h:
	* src/sendmsg-window.c:

2008-02-24  Peter Bloomfield

	* libbalsa/imap/imap-handle.c: (ir_fetch_seq): compile with
	gcc-4.3.
	* src/main.c: (balsa_handle_automation_options): ditto.

2008-02-20  Peter Bloomfield

	* libbalsa/mailbox.c: (libbalsa_mailbox_index_set_flags): check
	msg-tree != NULL;
	(libbalsa_mailbox_msgno_removed): check seqno only if msg-tree
	!= NULL;
	(libbalsa_mailbox_open, libbalsa_mailbox_set_msg_tree): create
	mindex, if necessary, when creating msg-tree, instead of when
	opening.

2008-02-18  Peter Bloomfield

	* libbalsa/mailbox.c: take more care in public methods, less in
	private methods.

2008-02-15  Peter Bloomfield

	* libbalsa/mailbox.c: use a single array of structures instead
	of two pointer arrays.
	* libbalsa/mailbox.h: ditto.
	* libbalsa/mailbox_local.c: (message_match_real): api change.

2008-02-14  Peter Bloomfield

	* src/main-window.c: block the correct signal handler.

2008-01-29  Peter Bloomfield

	* libbalsa/mailbox.c:
	(libbalsa_mailbox_n_nodes): traverse nodes instead of msg_tree;
	(libbalsa_mailbox_msgno_removed): ditto.
	(libbalsa_mailbox_search_iter_step): fix corner case.
	(lbm_node_info_new, lbm_node_info_free,